# investools

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci.yaml
investools/: __main__.py  blacklitterman.py  history.py  rebalancing.py  returns.py  sheets.py  utils.py
investools/model/: __init__.py  account.py  allocation.py  asset.py  base.py  config.py  portfolio.py
scripts/: clean_google_creds.sh
